# OpenGL-stuff

./: CMakeLists.txt  CMakePresets.json
Headers/: EBO.hpp  VAO.hpp  VBO.hpp  shaderClass.hpp
src/: EBO.cpp  VAO.cpp  VBO.cpp  glad.c  glad.h  main.cpp  shaderClass.cpp
